--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Space Invader</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
 
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -15,12 +21,13 @@
         <!-- <p>Invader</p> -->
         <div class="gameMenu__buttons">
           <button class="button" id="startGame">Start</button>
-          <button class="button">Option</button>
-          <button class="button">Description</button>
+          <button class="button">Setting</button>
+          <button class="button" id="menuOption">Controls</button>
           <button class="button">Exit</button>
         </div>
       </div>
     </div>
+
     <div class="gameOver" id="modalRestart">
       <div class="gameOver__container">
         <h3>Game Over</h3>
@@ -28,14 +35,28 @@
         <p>Score</p>
         <div class="gameOver__buttons">
           <button class="button" id="restartGame">Restart</button>
-          <button class="button">Home</button>
+          <button class="button" id="homeButton">Home</button>
           <button class="button">Exit</button>
         </div>
       </div>
     </div>
+
+    <!-- options -->
+    <div class="menuDescription" id="modalMenuOption">
+      <div class="menuDescription__container">
+        <h3>Game Control</h3>
+        <div class="menuDescription__list">
+          <p>Arrow Keys : Player Movement</p>
+          <p>Space Key : Fire Bullet</p>
+          <p>'M' Key : Play or Pause Music</p>
+          <button class="button" id="menuOptionBtn">Got it</button>
+        </div>
+      </div>
+    </div>
+
     <div class="canvas-container">
       <h1>Space Invader</h1>
-      <canvas id="canvas" width="500" height="500"></canvas>
+      <canvas id="canvas" width="500" height="700"></canvas>
     </div>
 
     <script src="background.js"></script>
